cleaned up dataset and started to create model

--- a/notebooks/EDA_Notebook.ipynb
+++ b/notebooks/EDA_Notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "fec074ac",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler, PowerTransformer\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "%matplotlib inline\n",
     "plt.style.use('ggplot')\n",
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "4a815246",
    "metadata": {},
    "outputs": [
@@ -353,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "62ac45be",
    "metadata": {},
    "outputs": [
@@ -633,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "cc9a4d24",
    "metadata": {},
    "outputs": [
@@ -686,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "47e96b9c",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "c74011bd",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "a98510c0",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "a6e05c20",
    "metadata": {},
    "outputs": [
@@ -1582,7 +1585,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1607,11 +1610,122 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117ebf3d",
+   "id": "552da21c",
    "metadata": {},
    "source": [
-    "GmSc (Game Score) formula:\n",
-    "Game Score Formula=(Points)+0.4*(Field Goals Made)+0.7*(Offensive Rebounds)+0.3*(Defensive rebounds)+(Steals)+0.7*(Assists)+0.7*(Blocked Shots)- 0.7*(Field Goal Attempts)-0.4*(Free Throws Missed) – 0.4*(Personal Fouls)-(Turnovers)"
+    "## Team-level win/loss dataset\n",
+    "Aggregate player box scores to team-game rows, build efficiency/rate features, attach opponent stats, and emit a clean CSV for classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "95bcdc50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Data   Tm  Opp  win  3P       3P%  3P%_delta   3P%_opp  3PA  3PA_opp  \\\n",
+      "0  2024-10-22  BOS  NYK    1  29  0.475410   0.108743  0.366667   61       30   \n",
+      "1  2024-10-22  LAL  MIN    1   5  0.166667  -0.150407  0.317073   30       41   \n",
+      "2  2024-10-22  MIN  LAL    0  13  0.317073   0.150407  0.166667   41       30   \n",
+      "3  2024-10-22  NYK  BOS    0  11  0.366667  -0.108743  0.475410   30       61   \n",
+      "4  2024-10-23  ATL  BRK    1   9  0.321429  -0.073920  0.395349   28       43   \n",
+      "\n",
+      "   3P_delta  3P_opp   3P_rate  3P_rate_delta  3P_rate_opp  AST    AST_TOV  \\\n",
+      "0        18      11  0.642105       0.257490     0.384615   33  11.000000   \n",
+      "1        -8      13  0.315789      -0.166563     0.482353   22   3.142857   \n",
+      "2         8       5  0.482353       0.166563     0.315789   17   1.133333   \n",
+      "3       -18      29  0.384615      -0.257490     0.642105   20   1.818182   \n",
+      "4        -8      17  0.350000      -0.122527     0.472527   25   1.562500   \n",
+      "\n",
+      "   AST_TOV_delta  AST_TOV_opp  AST_delta  AST_opp  BLK  BLK_delta  BLK_opp  \\\n",
+      "0       9.181818     1.818182         13       20    3          0        3   \n",
+      "1       2.009524     1.133333          5       17    8          7        1   \n",
+      "2      -2.009524     3.142857         -5       22    1         -7        8   \n",
+      "3      -9.181818    11.000000        -13       33    3          0        3   \n",
+      "4       0.327206     1.235294          4       21    9          3        6   \n",
+      "\n",
+      "   DRB  ...  ORB_share_delta  ORB_share_opp        ORtg  ORtg_delta  \\\n",
+      "0   29  ...         0.127941       0.147059  145.824126   26.096535   \n",
+      "1   31  ...         0.070768       0.255319  112.244897    9.121149   \n",
+      "2   35  ...        -0.070768       0.326087  103.123747   -9.121149   \n",
+      "3   29  ...        -0.127941       0.275000  119.727591  -26.096535   \n",
+      "4   33  ...        -0.012403       0.279070  115.118955    6.707741   \n",
+      "\n",
+      "     ORtg_opp  PF  PF_opp  PTS  PTS_delta  PTS_opp  STL  STL_delta  STL_opp  \\\n",
+      "0  119.727591  15      12  132         23      109    6          4        2   \n",
+      "1  103.123747  22      22  110          7      103    7          3        4   \n",
+      "2  112.244897  22      22  103         -7      110    4         -3        7   \n",
+      "3  145.824126  12      15  109        -23      132    2         -4        6   \n",
+      "4  108.411214  20      32  120          4      116   12          4        8   \n",
+      "\n",
+      "   TOV  TOV_delta  TOV_opp  TRB  TRB_delta  TRB_opp    pace  pace_delta  \\\n",
+      "0    3         -8       11   40          6       34   90.52       -0.52   \n",
+      "1    7         -8       15   46         -1       47   98.00       -1.88   \n",
+      "2   15          8        7   47          1       46   99.88        1.88   \n",
+      "3   11          8        3   34         -6       40   91.04        0.52   \n",
+      "4   16         -1       17   45          2       43  104.24       -2.76   \n",
+      "\n",
+      "   pace_opp    poss  poss_delta  poss_opp  \n",
+      "0     91.04   90.52       -0.52     91.04  \n",
+      "1     99.88   98.00       -1.88     99.88  \n",
+      "2     98.00   99.88        1.88     98.00  \n",
+      "3     90.52   91.04        0.52     90.52  \n",
+      "4    107.00  104.24       -2.76    107.00  \n",
+      "\n",
+      "[5 rows x 80 columns]\n",
+      "Saved cleaned team-level dataset to ../data/team_game_dataset.csv with shape (1534, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw = pd.read_csv('../data/training_dataset.csv')\n",
+    "raw['win'] = (raw['Res'] == 'W').astype(int)\n",
+    "\n",
+    "id_cols = ['Data', 'Tm', 'Opp', 'Res', 'win']\n",
+    "numeric_cols = [c for c in raw.columns if c not in id_cols + ['Player']]\n",
+    "team_totals = raw.groupby(['Data', 'Tm', 'Opp', 'Res', 'win'], as_index=False)[numeric_cols].sum()\n",
+    "\n",
+    "eps = 1e-6\n",
+    "team_totals['FG%'] = team_totals['FG'] / team_totals['FGA'].replace(0, np.nan)\n",
+    "team_totals['3P%'] = team_totals['3P'] / team_totals['3PA'].replace(0, np.nan)\n",
+    "team_totals['FT%'] = team_totals['FT'] / team_totals['FTA'].replace(0, np.nan)\n",
+    "possessions = team_totals['FGA'] - team_totals['ORB'] + team_totals['TOV'] + 0.44 * team_totals['FTA']\n",
+    "team_totals['poss'] = possessions\n",
+    "team_totals['pace'] = possessions\n",
+    "team_totals['ORtg'] = 100 * team_totals['PTS'] / (possessions + eps)\n",
+    "team_totals['FT_rate'] = team_totals['FTA'] / team_totals['FGA'].replace(0, np.nan)\n",
+    "team_totals['3P_rate'] = team_totals['3PA'] / team_totals['FGA'].replace(0, np.nan)\n",
+    "team_totals['AST_TOV'] = team_totals['AST'] / team_totals['TOV'].replace(0, np.nan)\n",
+    "team_totals['ORB_share'] = team_totals['ORB'] / team_totals['TRB'].replace(0, np.nan)\n",
+    "team_totals['DRB_share'] = team_totals['DRB'] / team_totals['TRB'].replace(0, np.nan)\n",
+    "\n",
+    "team_totals = team_totals.replace([np.inf, -np.inf], np.nan).fillna(0)\n",
+    "\n",
+    "# Attach opponent stats (swap Tm/Opp, then suffix)\n",
+    "opp = team_totals.copy()\n",
+    "opp = opp.rename(columns={'Tm': 'Opp', 'Opp': 'Tm', 'Res': 'Res_opp', 'win': 'win_opp'})\n",
+    "opp = opp.rename(columns={c: f'{c}_opp' for c in opp.columns if c not in ['Data', 'Tm', 'Opp', 'Res_opp', 'win_opp']})\n",
+    "team_games = team_totals.merge(opp, on=['Data', 'Tm', 'Opp'], how='left')\n",
+    "\n",
+    "delta_cols = ['PTS', 'FGA', 'FG%', '3P', '3P%', 'FT', 'FT%', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'ORtg', 'FT_rate', '3P_rate', 'AST_TOV', 'ORB_share', 'DRB_share', 'pace', 'poss']\n",
+    "for col in delta_cols:\n",
+    "    opp_col = f'{col}_opp'\n",
+    "    if opp_col in team_games.columns:\n",
+    "        team_games[f'{col}_delta'] = team_games[col] - team_games[opp_col]\n",
+    "\n",
+    "clean_cols = ['Data', 'Tm', 'Opp', 'win']\n",
+    "feature_cols = [c for c in team_games.columns if c not in ['Res', 'Res_opp', 'win_opp'] + clean_cols]\n",
+    "clean_df = team_games[clean_cols + sorted(feature_cols)]\n",
+    "\n",
+    "output_path = '../data/team_game_dataset.csv'\n",
+    "clean_df.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(clean_df.head())\n",
+    "print(f\"Saved cleaned team-level dataset to {output_path} with shape {clean_df.shape}\")\n"
    ]
   }
  ],
